--- a/compete/index.html
+++ b/compete/index.html
@@ -31,7 +31,7 @@
                     <td style="text-align: left;">
                         <span style="line-height: 1"><b>  </b></span>
                         <img src="../header-footer/ig_logo.jpg" alt="Logo" class="header-logo">
-                        <span style="line-height: 1"><b>INTEGIRLS [Chapter Name]</b></span>
+                        <span style="line-height: 1"><b>INTEGIRLS Austin</b></span>
                     </td>
                     <td style="text-align: right;">
                         <a href="../">Home</a> |
@@ -220,10 +220,10 @@
 
         <!-- Footer -->
         <div class="footer">
-            <div>© 2025 INTEGIRLS [chapter]</div>
+            <div>© 2025 INTEGIRLS Austin</div>
             <div>
-                <a href="https://www.instagram.com/integirls.[chapter]" target="_blank">@integirls.[chapter]</a> |
-                <a href="mailto:[chapter]@integirls.org">[chapter]@integirls.org</a>
+                <a href="https://www.instagram.com/integirls.austin" target="_blank">@integirls.austin</a> |
+                <a href="mailto:austin@integirls.org">austin@integirls.org</a>
             </div>
         </div>
     </div>
