--- a/header-footer/footer.html
+++ b/header-footer/footer.html
@@ -1,9 +1,9 @@
 <html>
 <div class="footer">
   <br>
-  © 2025 InteGirls LA/OC
+  © 2025 INTEGIRLS Austin
   <br>
-  <a href="https://www.instagram.com/integirls.la" target="_blank">@integirls.la</a> |
-  <a href="mailto:la@integirls.org">la@integirls.org</a>
+  <a href="https://www.instagram.com/integirls.austin" target="_blank">@integirls.austin</a> |
+  <a href="mailto:la@integirls.org">austin@integirls.org</a>
 </div>
 </html>
