--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-    <title>INTEGIRLS [Chapter Name]</title>
+    <title>INTEGIRLS Austin</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     
@@ -32,7 +32,7 @@
                     <td style="text-align: left;">
                         <span style="line-height: 1"><b>  </b></span>
                         <img src="header-footer/ig_logo.jpg" alt="Logo" class="header-logo">
-                        <span style="line-height: 1"><b>INTEGIRLS [Chapter Name]</b></span>
+                        <span style="line-height: 1"><b>INTEGIRLS Austin</b></span>
                     </td>
                     <td style="text-align: right;">
                         <a href="/">Home</a> |
@@ -49,7 +49,7 @@
 
         <main>
             <section class="hero">
-                <h1 class="fade-in">INTEGIRLS [Chapter Name]</h1>
+                <h1 class="fade-in">INTEGIRLS Austin</h1>
             </section>
 
             <!-- Add your mission statement below -->
@@ -61,7 +61,7 @@
             <!-- Add something you want to highlight on the homepage, such as an upcoming event, below! (placeholder modified from Bay Area website)-->
             <section class="long-announcement">
                 <h2>Upcoming Events</h2>
-                <p>For the 2025-2026 school year, INTEGIRLS [Chapter Name] will be hosting two competitions, one in the fall and one in the spring. We will also be hosting [events].
+                <p>For the 2025-2026 school year, INTEGIRLS Austin will be hosting two competitions, one in the fall and one in the spring. We will also be hosting [events].
                     Our events are open to all female and non binary-identifying middle and high schoolers. Both events are free of charge for everyone. No prior experience is required!
                     Sign-ups for the fall event will open once the date is finalized!</p>
             </section>
@@ -76,7 +76,7 @@
                         </td>
                         <td style="padding-left: 20px; padding-right: 20px; text-align: left;">
                             <h4>I do not have a INTEGIRLS Chapter near my area, but I am interested in participating in the competition. Can I still attend?</h4><br>
-                            We also encourage students not only from the [Chapter Name] to attend, but also other areas as well. You may reach out to us at the links provided at the bottom of this page.
+                            We also encourage students not only from the Austin to attend, but also other areas as well. You may reach out to us at the links provided at the bottom of this page.
                         </td>
                     </tr>
                     <tr>
@@ -92,7 +92,7 @@
                     <tr>
                         <td style="padding-left: 20px; padding-right: 20px; text-align: left;">
                             <h4>How can I contribute?</h4><br>
-                            You may choose to volunteer for us by emailing us at [chapter]@integirls.org or can donate to our non-profit <a href="https://integirls.github.io/donate/index.html">here</a>. You can also email us at <a href="mailto:la@integirls.org">la@integirls.org</a> to receive more information about how you can help. YOUR HELP MAKES A DIFFERENCE TO US. 
+                            You may choose to volunteer for us by emailing us at austin@integirls.org or can donate to our non-profit <a href="https://integirls.github.io/donate/index.html">here</a>. You can also email us at <a href="mailto:la@integirls.org">la@integirls.org</a> to receive more information about how you can help. YOUR HELP MAKES A DIFFERENCE TO US. 
                         </td>
                         <td style="padding-left: 20px; padding-right: 20px; text-align: left;">
                             <h4>How many competitions will you conduct throughout the year?</h4><br>
@@ -106,10 +106,10 @@
 
         <!-- Footer -->
         <div class="footer">
-            <div>© 2025 INTEGIRLS [chapter]</div>
+            <div>© 2025 INTEGIRLS Austin</div>
             <div>
-                <a href="https://www.instagram.com/integirls.[chapter]" target="_blank">@integirls.[chapter]</a> |
-                <a href="mailto:[chapter]@integirls.org">chapter@[chapter].org</a>
+                <a href="https://www.instagram.com/integirls.austin" target="_blank">@integirls.austin</a> |
+                <a href="mailto:austin@integirls.org">austin@integirls.org</a>
             </div>
         </div>
     </div>
