--- a/sponsors/index.html
+++ b/sponsors/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang = "en">
 <head>
-    <title>INTEGIRLS [Chapter Name]</title>
+    <title>INTEGIRLS Austin</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!--<link rel="icon" type="image/x-icon" href="../header-footer/ig_logo.jpg">-->
@@ -31,7 +31,7 @@
                     <td style="text-align: left;">
                         <span style="line-height: 1"><b>  </b></span>
                         <img src="../header-footer/ig_logo.jpg" alt="Logo" class="header-logo">
-                        <span style="line-height: 1"><b>INTEGIRLS [Chapter Name]</b></span>
+                        <span style="line-height: 1"><b>INTEGIRLS Austin</b></span>
                     </td>
                     <td style="text-align: right;">
                         <a href="../">Home</a> |
@@ -130,16 +130,16 @@
             <section class="sponsor-section contact">
                 <h2>Interested in Sponsoring?</h2>
                 <p>We are always looking for sponsors and partners to help us achieve our mission.</p>
-                <p>If you or your organization is interested in supporting INTEGIRLS [Chapter Name], please reach out to <a href="mailto:email@integirls.org">email@integirls.org</a>.</p>
+                <p>If you or your organization is interested in supporting INTEGIRLS Austin, please reach out to <a href="mailto:email@integirls.org">email@integirls.org</a>.</p>
             </section>
         </main>
 
         <!-- Footer -->
         <div class="footer">
-            <div>© 2025 INTEGIRLS [chapter]</div>
+            <div>© 2025 INTEGIRLS Austin</div>
             <div>
-                <a href="https://www.instagram.com/integirls.[chapter]" target="_blank">@integirls.[chapter]</a> |
-                <a href="mailto:[chapter]@integirls.org">[chapter]@integirls.org</a>
+                <a href="https://www.instagram.com/integirls.austin" target="_blank">@integirls.austin</a> |
+                <a href="mailto:austin@integirls.org">austin@integirls.org</a>
             </div>
         </div>
     </div>
